:sparkles: 新增stream工具类